bundle build pt2